bk_ida/gobmkida/c0/getopt_internal
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/getopt_internal/src/utils/getopt.c:1012:21: error: use of undeclared identifier '_getopt_initialized'
if ( !gg_optind || !_getopt_initialized ) 
                    ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/getopt_internal/src/utils/getopt.c:1017:1: error: use of undeclared identifier '_getopt_initialized'; did you mean '__getopt_initialized'?
_getopt_initialized = 1; 
^~~~~~~~~~~~~~~~~~~
__getopt_initialized
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/getopt_internal/src/utils/getopt.c:132:5: note: '__getopt_initialized' declared here
int __getopt_initialized;
    ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/getopt_internal/src/obj/5/getopt.o] Error 1
